Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 <li>used reinforcement learning to let the smartcab learn an optimal policy for driving city roads</li>
 <li>fine tuned parameters to make the smartcab be able to reach a destination within a goal time after a training period of 50 test drives</li>
 </ul>
+
+<p><img src="https://github.com/jannab/smartcab/blob/explore/smartcab_screenshot.png?raw=true" alt="Smartcab Screenshot"></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/jannab">jannab</a></p>
