Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 <p>Trained a smartcab, a self-driving car, to follow the traffic rules using reinforcement learning techniques and python.</p>
 
-<p>Steps involved:</p>
+<h3>
+<a id="steps-involved" class="anchor" href="#steps-involved" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Steps involved</h3>
 
 <ul>
 <li>read in environment, taking traffic lights and other cars as input</li>
